--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reduce-filter-stream",
+  "name": "stream-reducer",
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
